# quack-but-for-LINUX

./: vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs  platform.rs
