[package]
name = "quack"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "quack_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
enigo = "0.1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.24"
base64 = "0.21"

# Cross-platform helpers
open = "5"
dirs = "5"
thiserror = "1"

# ❌ Removed Windows-only crates (not needed on Linux)
# winapi
# windows
